# focus

./: CMakeLists.txt  README.md
Rpackage/: .CMakeLists.txt.swp  CMakeLists.txt
Rpackage/focus/: ChangeLog  DESCRIPTION  NAMESPACE
commandline/: CMakeLists.txt  FocusCmdLine.cpp  osx-install.txt
lib/: AllSVDObserver.h  Animation.h  Animator.h  DataInterface.h  DataProxy.h  Display.h  Focus.h  GMRAData.h  GlutStrokeFont.h  GroupSVDObserver.h  Rotation.h  SVDObserver.h  SingleGMRAData.h  SparseData.h  StandardData.h  StandardDataProxy.h
lib/dels/: AdjustableDisplayElement.h  BallShadowBackground.h  CenterBallShadowBackground.h  CircleBackground.h  DisplayElement.h  GroupMouseActionHandler.h  HorizontalLinesCircleBackground.h  ImageDEL.h  MatrixDEL.h  OffsetMatrixDEL.h  PCADEL.h  PointsDEL.h  ProfileDEL.h  ProjectionBackground.h  ProjectionDEL.h  ProjectorBallShadowBackground.h  Scatter3DEL.h  SubMatrixDEL.h  VerticalLinesCircleBackground.h
lib/projectors/: AbstractLineProjector.h  AbstractPlanarProjector.h  AnimationProjectorObserver.h  CorrelationProjector.h  FocusColorDataObserver.h  FocusColorProjectorObserver.h  GroupedProjectorObserver.h  HeatTriangulationProjector.h  HyperbolicLineFocusProjector.h  HyperbolicOrthogonalProjector.h  HyperbolicSinglePointFocusProjector.h  HyperbolicTwoPointFocusProjector.h  LineFocusProjector.h  LineProjector.h  LinearProjector.h  OrthogonalProjector.h  Projector.h  ProjectorAnimator.h  ProjectorObserver.h  RotationProjectorAnimator.h  SinglePointFocusProjector.h  SpericalPlanarProjector.h  TangentRotationProjectorAnimator.h  (+2 more)
(+17 files in other folders)
